--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "canvas": "^3.1.0",
     "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.1.0",
+    "date-fns-tz": "^3.2.0",
     "hono": "^4.7.5"
   },
   "devDependencies": {
